@@ -527,6 +527,7 @@ sub htmlSearchBox {
    a href => '/r',     $sel eq 'r' ? (class => 'sel') : (), 'Releases';
    a href => '/p/all', $sel eq 'p' ? (class => 'sel') : (), 'Producers';
    a href => '/g',     $sel eq 'g' ? (class => 'sel') : (), 'Tags';
+   a href => '/u/all', $sel eq 'u' ? (class => 'sel') : (), 'Users';
   end;
   fieldset class => 'search';
    input type => 'text', name => 'q', id => 'q', class => 'text', value => $v;
